<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Appointment</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_appointment">NewAppointmentActivity</string>
    <string name="disease">Disease Info</string>
    <string name="doctors">Select Doctor</string>
    <string name="appointment_type">Appointment Type</string>
    <string name="appointment_time">Select Time</string>
    <string name="book_appointment">Book Appointment</string>

</resources>
